Added new implementation for street view
Added navigation
