# HudHud/Model/MapStore.swift
@@ -64,9 +64,8 @@ final class MapStore: ObservableObject {
     @Published var trackingState: TrackingState = .none
 
     var hudhudStreetView = HudhudStreetView()
-    @Published var street360ViewPins: Bool = false
     @Published var street360View: Bool = false
-    @Published var street360ViewItems = [StreetViewItem]()
+    @Published var streetViewScene: StreetViewScene?
 
     @Published var navigatingRoute: Route? {
         didSet {
@@ -190,17 +189,6 @@ final class MapStore: ObservableObject {
                 let streetViewPoint = StreetViewPoint(location: coordinate,
                                                       heading: self.motionViewModel.position.heading)
                 streetViewPoint.feature
-            }
-        }
-    }
-
-    var street360ViewSource: ShapeSource {
-        return ShapeSource(identifier: MapSourceIdentifier.street360ViewPoint,
-                           options: [.clustered: false]) {
-            self.street360ViewItems.compactMap { item in
-                return MLNPointFeature(coordinate: item.coordinate) { feature in
-                    feature.attributes["sv_id"] = item.id
-                }
             }
         }
     }
@@ -337,26 +325,41 @@ extension MapStore: NavigationViewControllerDelegate {
 
 extension MapStore {
 
-    func loadNearbyStreetView(_: CLLocationCoordinate2D) async {
-        do {
-//                guard let userLocation = try await self.locationManager.requestLocation().location?.coordinate else {
-//                    return
-//                }
+//    func loadNearbyStreetView(_: CLLocationCoordinate2D) async {
+//        do {
+    ////                guard let userLocation = try await self.locationManager.requestLocation().location?.coordinate else {
+    ////                    return
+    ////                }
+//
+//            // TODO: since the API only return the pin if the user id close to the street view
+//            // I hardcoded the lat and lon for testing only...
+//            let lat = 24.7051777777778
+//            let lon = 46.7044388888889
+//            if let svPoints = try await hudhudStreetView.getStreetView(lat: lat, lon: lon) {
+//                print(svPoints)
+//                self.street360ViewItems = [svPoints]
+//            }
+//            if let boundingBox = self.generateMLNCoordinateBounds(from: [CLLocationCoordinate2D(latitude: lat, longitude: lon)]) {
+//                self.camera = MapViewCamera.boundingBox(boundingBox, edgePadding: UIEdgeInsets(top: 40, left: 40, bottom: 60, right: 40))
+//            }
+//
+//        } catch {
+//            print("error \(error)")
+//        }
+//    }
 
-            // TODO: since the API only return the pin if the user id close to the street view
-            // I hardcoded the lat and lon for testing only...
-            let lat = 24.7051777777778
-            let lon = 46.7044388888889
-            if let svPoints = try await hudhudStreetView.getStreetView(lat: lat, lon: lon) {
-                print(svPoints)
-                self.street360ViewItems = [svPoints]
+    func loadStreetViewScene(id: Int, block: ((_ item: StreetViewScene?) -> Void)?) {
+        Task {
+            do {
+                if let streetViewScene = try await hudhudStreetView.getStreetViewScene(id: id) {
+                    print(streetViewScene)
+                    self.streetViewScene = streetViewScene
+                    self.street360View = true
+                    block?(streetViewScene)
+                }
+            } catch {
+                print("error \(error)")
             }
-            if let boundingBox = self.generateMLNCoordinateBounds(from: [CLLocationCoordinate2D(latitude: lat, longitude: lon)]) {
-                self.camera = MapViewCamera.boundingBox(boundingBox, edgePadding: UIEdgeInsets(top: 40, left: 40, bottom: 60, right: 40))
-            }
-
-        } catch {
-            print("error \(error)")
         }
     }
 
