# HudHud/Views/ContentView.swift
@@ -363,8 +363,8 @@ struct ContentView: View {
                 Spacer()
             }
             .overlay(alignment: .top) {
-                if self.mapStore.street360View, let item = mapStore.street360ViewItems.first {
-                    Street360View(streetViewItem: item, mapStore: self.mapStore,
+                if self.mapStore.street360View, let item = mapStore.streetViewScene {
+                    Street360View(streetViewScene: item, mapStore: self.mapStore,
                                   expandedView: { expand in
 
                                       self.mapStore.searchShown = !expand
@@ -507,6 +507,7 @@ extension MapLayerIdentifier {
     nonisolated static let tapLayers: Set<String> = [
         Self.restaurants,
         Self.shops,
-        Self.simpleCircles
+        Self.simpleCircles,
+        Self.streetView
     ]
 }
